--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Lumen
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:JFgdA4COgw85FnIdQcwdJh5eVwqszEG6a4yO/d1iahA=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
@@ -8,12 +8,14 @@ APP_TIMEZONE=UTC
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=pgsql
+DOCTRINE_CONNECTION=customPgSql
+DB_HOST=postgres
+DB_PORT=5432
+DB_DATABASE=nimble_challenge
+DB_USERNAME=ruser
+DB_PASSWORD=P2ssword
 
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
+QUEUE_DRIVER=database
