Implement upload file api

--- a/back-end/composer.json
+++ b/back-end/composer.json
@@ -11,7 +11,8 @@
         "zircote/swagger-php": "3.*",
         "predis/predis": "^1.1.6",
         "darkaonline/swagger-lume":"8.0",
-        "laravel/passport": "9.4.0"
+        "laravel/passport": "9.4.0",
+        "guzzlehttp/guzzle": "7.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9.1",
