--- a/.docker/php-fpm/Dockerfile
+++ b/.docker/php-fpm/Dockerfile
@@ -16,3 +16,13 @@ RUN pecl install redis-4.0.1 \
     && docker-php-ext-enable redis xdebug \
     && docker-php-ext-install mysqli pdo pdo_mysql pdo_pgsql
 
+# Cron
+RUN apt-get update && apt-get install -y cron \
+        rsyslog \
+    && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+COPY cron/cron.d /etc/cron.d
+COPY cron/bin /cron/bin
+RUN chmod 0700 /etc/cron.d/script
+RUN chown -R root /cron/bin
+RUN chmod 0700 -R /cron/bin
