--- a/font-end/package.json
+++ b/font-end/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~12.0.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.2",
     "bootstrap": "^4.5.0",
+    "ngx-progressbar": "^6.1.1",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
