--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -22,5 +22,6 @@ QUEUE_DRIVER=database
 
 QUOTA_LIMIT_PER_DAY=100
 
+GOOGLE_API_URL=https://www.googleapis.com/customsearch/v1
 GOOGLE_API_KEY=
 GOOGLE_PARAMS_CX=
