--- a/back-end/composer.json
+++ b/back-end/composer.json
@@ -6,13 +6,14 @@
     "type": "project",
     "require": {
         "php": "^7.2.5",
+        "darkaonline/swagger-lume": "8.0",
+        "ezyang/htmlpurifier": "^4.13",
+        "guzzlehttp/guzzle": "7.0",
+        "laravel-doctrine/extensions": "1.4.0",
         "laravel/lumen-framework": "^7.0",
-        "laravel-doctrine/extensions":  "1.4.0",
-        "zircote/swagger-php": "3.*",
-        "predis/predis": "^1.1.6",
-        "darkaonline/swagger-lume":"8.0",
         "laravel/passport": "9.4.0",
-        "guzzlehttp/guzzle": "7.0"
+        "predis/predis": "^1.1.6",
+        "zircote/swagger-php": "3.*"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9.1",
